--- a/Task-Manager.html
+++ b/Task-Manager.html
@@ -711,8 +711,8 @@ body {
     background: var(--background-secondary);
     z-index: 10;
     padding-top: 1rem;
+    padding-bottom: .5rem;
     border-radius: 1rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     margin-top: -2px;
 }
 
