--- a/Task-Manager.html
+++ b/Task-Manager.html
@@ -939,7 +939,7 @@ select::-ms-expand {
                     <i class="fas fa-plus"></i> Add Task
                 </button>
                 <!-- Add Test Data Button -->
-                <button id="add-test-data" class="glow-button" style="background: linear-gradient(135deg, #8b5cf6, #4f46e5);">
+                <button id="add-test-data" class="glow-button" style="display: none; background: linear-gradient(135deg, #8b5cf6, #4f46e5);">
                     <i class="fas fa-vial"></i> Add Test Tasks
                 </button>
             </div>
